<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price (numbers only)</string>
    <string name="description_hint">Description</string>
    <string name="save_menu">Save</string>
    <string name="delete_deal">Delete Deal</string>
    <string name="upload_image">Upload Image</string>
    <string name="image">Image</string>
    <string name="deal_image">Deal Image</string>
    <string name="tv">0.0</string>
    <string name="insert_menu">New Travel Deal</string>
    <string name="logout_menu">Logout</string>
</resources>
